--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 
 <body>
     <div id="root">
-        <p>Hello </p>
-        <h1>Heelooooooooo from h1</h1>
+        <!-- <p>Hello </p>
+        <h1>Heelooooooooo from h1</h1> -->
     </div>
  <!--CDN-->
     <!-- <script crossorigin src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script> -->
 
 
-    <script type="module" src="./App.js"></script>
+    <script type="module" src="./src/App.js"></script>
 </body>
 
 </html>
